--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
-## macOS
+## Exclude OS X folder attributes
 .DS_Store
 
 ## Build generated
@@ -38,13 +38,9 @@ playground.xcworkspace
 # Swift Package Manager
 #
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
-Packages/
+# Packages/
 # Package.pins
-# Package.resolved
 .build/
-
-# The package .xcodeproj can be regenerated at any time using `swift package generate-xcodeproj`
-/*.xcodeproj
 
 # CocoaPods
 #
@@ -61,6 +57,10 @@ Packages/
 
 Carthage/Build
 
+# jazzy
+undocumented.json
+*.tgz
+
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
@@ -68,15 +68,13 @@ Carthage/Build
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/#source-control
 
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots/**/*.png
 fastlane/test_output
+fastlane/[Pp]rovisioning
+fastlane/report.xml
+fastlane/[Bb]uild
+fastlane/DerivedData
+fastlane/screenshots
+fastlane/[Pp]review.html
 
-# Zinc
-#
-# These rules are only used for the Zinc source project.
-
-# Demo/
-Demo/**/*
-!Demo/Zincfile
+# SpotHero
+fastlane/.env.local
