--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,42 +1,1 @@
-# Updated for v0.69.0
-
-AllCops:
-  Exclude:
-    - 'Pods/*'
-  Include:
-    - '**/Dangerfile'
-    - '**/Fastfile'
-    - '**/Gemfile'
-    - '**/Podfile'
-    - '**/*.rb'
-    - '**/*.podspec'
-
-# ABC size = Assignment Branch Condition size, kind of like cyclomatic complexity
-# Fastlane as a whole kind of blows up when this is enabled, so we're turning it off (at least for now)
-Metrics/AbcSize:
-  Enabled: false
-
-# We don't care about block length right now
-Metrics/BlockLength:
-  Enabled: false
-
-# Matches SwiftLint line length
-Metrics/LineLength:
-  Max: 150
-
-# We don't care about method length right now
-Metrics/MethodLength:
-  Enabled: false
-
-# This means we prefer the use of !!foo instead of !foo.nil?
-Style/DoubleNegation:
-  Enabled: false
-
-# Matches SwiftLint rules on trailing commas in multiline
-Style/TrailingCommaInArguments:
-  EnforcedStyleForMultiline: comma
- 
-# Opt out of using %w or %W for arrays of words.
-# Example: ['Foo', 'Bar'] instead of %w[Foo Bar]
-Style/WordArray:
-  Enabled: false
+inherit_from: '.zinc/.rubocop.yml'
