--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,8 +2,7 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "2.0.0",
-    "tasks": [
-        {
+    "tasks": [{
             "label": "swift build",
             "type": "shell",
             "command": "swift build",
@@ -26,6 +25,16 @@
             "label": "swift package resolve",
             "type": "shell",
             "command": "swift package resolve",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": []
+        },
+        {
+            "label": "swift format",
+            "type": "shell",
+            "command": "swift run swiftformat .",
             "group": {
                 "kind": "build",
                 "isDefault": true
