--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,9 @@
+# This file is sourced from https://github.com/spothero/Shared-iOS
+
 # Lines starting with '#' are comments.
 # Each line is a file pattern followed by one or more owners.
 # Source: https://blog.github.com/2017-07-06-introducing-code-owners/
 # Source: https://help.github.com/articles/about-codeowners/
 
 # These owners will be the default owners for everything in the repo.
-@spothero/ios
+* @spothero/ios
