--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,20 @@ jobs:
           brew install swiftformat
       - name: Run Danger
         run: sh ./scripts/danger_lint.sh
-  spm:
-    name: ${{ matrix.os }}
+  # test_linux:
+  #   name: Test Linux ${{ matrix.os }}
+  #   runs-on: ${{ matrix.os }}
+  #   needs: [lint]
+  #   strategy:
+  #     matrix:
+  #       os: [ubuntu-latest]
+  #   steps:
+  #     - name: Run Tests
+  #       run: |
+  #         swift test --generate-linuxmain
+  #         sh ./scripts/swift_build.sh
+  test_macOS:
+    name: Test ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     needs: [lint]
     strategy:
@@ -36,8 +48,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Run Tests
         run: sh ./scripts/swift_build.sh
-      - name: Upload Step Output
+      - name: Upload Test Output
         uses: actions/upload-artifact@v1
         with:
-          name: "${{ matrix.os }} Output"
+          name: "${{ matrix.os }} Test Output"
           path: ${{ env.DEPLOY_DIRECTORY }}
