--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ fastlane/[Pp]review.html
 # dotenv
 # A .env.local file contains keys that should never be checked into the repository
 .env.local
+
+# Zinc
+tmp
